Improve handling of missing ES participant document